Fix profile photo cropping

--- a/style.css
+++ b/style.css
@@ -324,8 +324,6 @@ section {
     width: 100%;
     max-width: 450px;
     height: auto;
-    aspect-ratio: 3 / 4;
-    object-fit: cover;
     display: block;
 }
 
